--- a/WebContent/html/bunpou.html
+++ b/WebContent/html/bunpou.html
@@ -3,8 +3,49 @@
         <meta charset="UTF-8"/>
         <title>文法</title>
     </head>
+    <style>
+        .tableStyle {
+            border: 1px solid #000;
+            width: 100%;
+        }
+        .tableStyle th,
+        .tableStyle td {
+            border: 1px solid #000;
+            padding: 5px;
+        }
+    </style>
     <body>
         <h1>日本語能力試験の文法</h1>
         <p>文法のページです。</p>
+        <table class="tableStyle">
+            <colgroup>
+                <col style="width: 20%;"/>
+                <col style="width: 80%;"/>
+            </colgroup>
+            <tr>
+                <th>
+                    文法名
+                </th>
+                <th>
+                    意味
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    〜らしい
+                </td>
+                <td>
+                    Quả đúng là ~, giống như là ~ (mô tả nét đặc trưng)
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    〜みたいだ
+                </td>
+                <td>
+                    Như là ~ (so sánh giữa 2 vật có nét tương đồng)
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
