create column Rei

--- a/WebContent/html/bunpou.html
+++ b/WebContent/html/bunpou.html
@@ -19,8 +19,9 @@
         <p>文法のページです。</p>
         <table class="tableStyle">
             <colgroup>
-                <col style="width: 20%;"/>
-                <col style="width: 80%;"/>
+                <col style="width: 10%;"/>
+                <col style="width: 40%;"/>
+                <col style="width: 50%;"/>
             </colgroup>
             <tr>
                 <th>
@@ -28,6 +29,9 @@
                 </th>
                 <th>
                     意味
+                </th>
+                <th>
+                    れい
                 </th>
             </tr>
             <tr>
@@ -37,13 +41,30 @@
                 <td>
                     Quả đúng là ~, giống như là ~ (mô tả nét đặc trưng)
                 </td>
+                <td>
+                    
+                </td>
             </tr>
             <tr>
                 <td>
-                    〜みたいだ
+                    〜みたい
                 </td>
                 <td>
                     Như là ~ (so sánh giữa 2 vật có nét tương đồng)
+                </td>
+                <td>
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    〜みたい
+                </td>
+                <td>
+                    Có vẻ là ~ (phỏng đoán)
+                </td>
+                <td>
+                    
                 </td>
             </tr>
         </table>
