add Vnaito, Vnakucha

--- a/WebContent/html/bunpou.html
+++ b/WebContent/html/bunpou.html
@@ -19,9 +19,9 @@
         <p>文法のページです。</p>
         <table class="tableStyle">
             <colgroup>
-                <col style="width: 10%;"/>
+                <col style="width: 20%;"/>
                 <col style="width: 40%;"/>
-                <col style="width: 50%;"/>
+                <col style="width: 40%;"/>
             </colgroup>
             <tr>
                 <th>
@@ -36,7 +36,18 @@
             </tr>
             <tr>
                 <td>
-                    〜らしい
+                    〜Ⅴないと　．〜Ⅴなくちゃう
+                </td>
+                <td>
+                    Phải làm ~
+                </td>
+                <td>
+                    
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    〜Nらしい
                 </td>
                 <td>
                     Quả đúng là ~, giống như là ~ (mô tả nét đặc trưng)
@@ -47,7 +58,7 @@
             </tr>
             <tr>
                 <td>
-                    〜みたい
+                    〜Nみたい
                 </td>
                 <td>
                     Như là ~ (so sánh giữa 2 vật có nét tương đồng)
@@ -58,7 +69,7 @@
             </tr>
             <tr>
                 <td>
-                    〜みたい
+                    〜Nみたい
                 </td>
                 <td>
                     Có vẻ là ~ (phỏng đoán)
