add tameni and youni

--- a/WebContent/html/bunpou.html
+++ b/WebContent/html/bunpou.html
@@ -78,6 +78,44 @@
                     明日は<ins>雨みたい</ins>だ。
                 </td>
             </tr>
+            <tr>
+                <td>
+                    〜Ⅴるために　（意志）
+                </td>
+                <td>
+                    Để ~
+                </td>
+                <td>
+                    <ins>家を買うために</ins>、貯金をしている。
+                </td>
+            </tr>
+            <tr>
+                <td rowspan="2">
+                    〜Ⅴる／〜Ⅴない／Ⅴれるように　（無意志）
+                </td>
+                <td rowspan="2">
+                    Để ~
+                </td>
+                <td>
+                    <ins>忘れないように</ins>、手帳に書いておこう。
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <ins>みんなに聞こえるように</ins>、もっと大きな声で話してください。
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    〜Ⅴる／〜Ⅴないように
+                </td>
+                <td>
+                    Cố gắng làm ~
+                </td>
+                <td>
+                    毎食後、<ins>歯を磨くようにしています</ins>。
+                </td>
+            </tr>
         </table>
     </body>
 </html>
