--- a/WebContent/html/bunpou.html
+++ b/WebContent/html/bunpou.html
@@ -42,7 +42,7 @@
                     Phải làm ~
                 </td>
                 <td>
-                    試験まであと一か月だ。がんばって<ins>勉強しないと</ins>。
+                    試験まであと3か月だ。がんばって<ins>勉強しないと</ins>。
                 </td>
             </tr>
             <tr>
@@ -64,7 +64,7 @@
                     Như là ~ (so sánh giữa 2 vật có nét tương đồng)
                 </td>
                 <td>
-                    このアパートは、<ins>ホテルみたい</ins>だ。
+                    このアパートは、<ins>だれも住んでいないみたい</ins>だ。
                 </td>
             </tr>
             <tr>
@@ -75,7 +75,7 @@
                     Có vẻ là ~ (phỏng đoán)
                 </td>
                 <td>
-                    明日は<ins>雨みたい</ins>だ。
+                    明日は、<ins>雨みたい</ins>だ。
                 </td>
             </tr>
             <tr>
@@ -91,7 +91,7 @@
             </tr>
             <tr>
                 <td rowspan="2">
-                    〜Ⅴる／〜Ⅴない／Ⅴれるように　（無意志）
+                    〜Ⅴる／〜Ⅴない／〜Ⅴれるように　（無意志）
                 </td>
                 <td rowspan="2">
                     Để ~
@@ -107,13 +107,40 @@
             </tr>
             <tr>
                 <td>
-                    〜Ⅴる／〜Ⅴないように
+                    〜Ⅴる／〜Ⅴないようにする
                 </td>
                 <td>
                     Cố gắng làm ~
                 </td>
                 <td>
                     毎食後、<ins>歯を磨くようにしています</ins>。
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    〜Ⅴる／〜Ⅴないように
+                </td>
+                <td>
+                    Ra lệnh ~ (nhẹ nhàng)
+                </td>
+                <td>
+                    明日は、もっと<ins>早く来るように</ins>。
+                </td>
+            </tr>
+            <tr>
+                <td rowspan="2">
+                    〜Ⅴます／〜Ⅴませんように
+                </td>
+                <td rowspan="2">
+                    Mong là ~ (ước nguyện)
+                </td>
+                <td>
+                    <ins>合格しますように</ins>。
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    病気に<ins>罹りませんように</ins>。
                 </td>
             </tr>
         </table>
