--- a/WebContent/html/bunpou.html
+++ b/WebContent/html/bunpou.html
@@ -110,7 +110,7 @@
                     〜Ⅴる／〜Ⅴないようにする
                 </td>
                 <td>
-                    Cố gắng làm ~
+                    Cố gắng làm ~（習慣、心がけ努力を表す。）
                 </td>
                 <td>
                     毎食後、<ins>歯を磨くようにしています</ins>。
@@ -121,7 +121,7 @@
                     〜Ⅴる／〜Ⅴないように
                 </td>
                 <td>
-                    Ra lệnh ~ (nhẹ nhàng)
+                    軽い命令を表す。
                 </td>
                 <td>
                     明日は、もっと<ins>早く来るように</ins>。
@@ -132,7 +132,7 @@
                     〜Ⅴます／〜Ⅴませんように
                 </td>
                 <td rowspan="2">
-                    Mong là ~ (ước nguyện)
+                    Mong là ~ (念願)
                 </td>
                 <td>
                     <ins>合格しますように</ins>。
@@ -141,6 +141,22 @@
             <tr>
                 <td>
                     病気に<ins>罹りませんように</ins>。
+                </td>
+            </tr>
+            <tr>
+                <td rowspan="2">
+                    〜Ⅴようと思う
+                </td>
+                <td rowspan="2">
+                    意志や予定を表す。
+                </td>
+                <td>
+                    会社を<ins>辞めようと思っている</ins>。
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    来年、国に<ins>帰ろうと思っています</ins>。
                 </td>
             </tr>
         </table>
