add N/ Vte bakari

--- a/WebContent/html/bunpou.html
+++ b/WebContent/html/bunpou.html
@@ -1,15 +1,15 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>文法</title>
+        <title>N3の文法</title>
     </head>
     <style>
-        .tableStyle {
+        .table-style {
             border: 1px solid #000;
             width: 100%;
         }
-        .tableStyle th,
-        .tableStyle td {
+        .table-style th,
+        .table-style td {
             border: 1px solid #000;
             padding: 5px;
         }
@@ -17,7 +17,7 @@
     <body>
         <h1>日本語能力試験の文法</h1>
         <p>文法のページです。</p>
-        <table class="tableStyle">
+        <table class="table-style">
             <colgroup>
                 <col style="width: 20%;"/>
                 <col style="width: 40%;"/>
@@ -39,7 +39,7 @@
                     〜Ⅴないと　．〜Ⅴなくちゃう
                 </td>
                 <td>
-                    Phải làm ~
+                    Phải làm 〜
                 </td>
                 <td>
                     試験まであと3か月だ。がんばって<ins>勉強しないと</ins>。
@@ -50,7 +50,7 @@
                     〜Nらしい
                 </td>
                 <td>
-                    Quả đúng là ~, giống như là ~ (mô tả nét đặc trưng)
+                    Quả đúng là 〜, giống như là 〜 (mô tả nét đặc trưng)
                 </td>
                 <td>
                     今日は、<ins>春らしい</ins>暖かい日だ。
@@ -61,7 +61,7 @@
                     〜Nみたい
                 </td>
                 <td>
-                    Như là ~ (so sánh giữa 2 vật có nét tương đồng)
+                    Như là 〜 (so sánh giữa 2 vật có nét tương đồng)
                 </td>
                 <td>
                     このアパートは、<ins>だれも住んでいないみたい</ins>だ。
@@ -72,7 +72,7 @@
                     〜Nみたい
                 </td>
                 <td>
-                    Có vẻ là ~ (phỏng đoán)
+                    Có vẻ là 〜 (phỏng đoán)
                 </td>
                 <td>
                     明日は、<ins>雨みたい</ins>だ。
@@ -83,7 +83,7 @@
                     〜Ⅴるために　（意志）
                 </td>
                 <td>
-                    Để ~
+                    Để 〜
                 </td>
                 <td>
                     <ins>家を買うために</ins>、貯金をしている。
@@ -94,7 +94,7 @@
                     〜Ⅴる／〜Ⅴない／〜Ⅴれるように　（無意志）
                 </td>
                 <td rowspan="2">
-                    Để ~
+                    Để 〜
                 </td>
                 <td>
                     <ins>忘れないように</ins>、手帳に書いておこう。
@@ -110,7 +110,7 @@
                     〜Ⅴる／〜Ⅴないようにする
                 </td>
                 <td>
-                    Cố gắng làm ~（習慣、心がけ努力を表す。）
+                    Cố gắng làm 〜（習慣、心がけ努力を表す。）
                 </td>
                 <td>
                     毎食後、<ins>歯を磨くようにしています</ins>。
@@ -132,7 +132,7 @@
                     〜Ⅴます／〜Ⅴませんように
                 </td>
                 <td rowspan="2">
-                    Mong là ~ (念願)
+                    Mong là 〜 (念願)
                 </td>
                 <td>
                     <ins>合格しますように</ins>。
@@ -157,6 +157,22 @@
             <tr>
                 <td>
                     来年、国に<ins>帰ろうと思っています</ins>。
+                </td>
+            </tr>
+            <tr>
+                <td rowspan="2">
+                    〜N／〜Ⅴてばかり
+                </td>
+                <td rowspan="2">
+                    Chỉ toàn là 〜N/ Chỉ toàn làm 〜V
+                </td>
+                <td>
+                    息子は仕事もしないで<ins>遊んでばかりいる</ins>。
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    この店のお客さんは、<ins>女性ばかり</ins>ですね。
                 </td>
             </tr>
         </table>
